--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "dev": "vite",
     "preview": "vite preview",
     "deploy": "gh-pages -d dist",
-    "homepage": "https://AmoduOlaribigbe.github.io/My-CV"
+    "homepage": "https://amoduolaribigbe.github.io/My-CV"
   },
   "dependencies": {
     "@emotion/react": "11.14.0",
@@ -59,6 +59,7 @@
     "react-resizable-panels": "2.1.7",
     "react-responsive-masonry": "2.7.1",
     "react-router": "7.13.0",
+    "react-router-dom": "^7.13.0",
     "react-slick": "0.31.0",
     "recharts": "2.15.2",
     "sonner": "2.0.3",
