--- a/package.json
+++ b/package.json
@@ -3,12 +3,15 @@
   "private": true,
   "version": "0.0.1",
   "type": "module",
+
+  "homepage": "https://amoduolaribigbe.github.io/My-CV/",
+
   "scripts": {
-    "build": "vite build",
     "dev": "vite",
+    "build": "vite build",
     "preview": "vite preview",
-    "deploy": "gh-pages -d dist",
-    "homepage": "https://amoduolaribigbe.github.io/My-CV"
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d dist"
   },
   "dependencies": {
     "@emotion/react": "11.14.0",
